# foodmood

./: .dockerignore  .env.docker  .env.example  .gitignore  .pre-commit-config.yaml  DOCKER.md  Dockerfile  README.md  ToDos.md  docker-compose.override.dev.yml  docker-compose.override.local.yml  docker-compose.prod.yml  docker-compose.yml  gunicorn.conf.py  pyproject.toml  wellbeing.readme.md
.devcontainer/: devcontainer.json
.github/workflows/: build-dev.yml  build-prod.yml  build.yml  lint.yml  test.yml
foodmood/: manage.py
foodmood/edibles/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
foodmood/edibles/migrations/: 0001_initial.py  0002_edible_ingredients_delete_ingredient.py  0003_alter_edible_name.py  0004_alter_edible_ingredients.py
foodmood/edibles/templates/edibles/: detail.html  edible_not_found.html  index.html
foodmood/foodmood/: asgi.py  settings.py  urls.py  views.py  wsgi.py
foodmood/meals/: admin.py  admin_new.py  forms.py  models.py  tests.py  urls.py  views.py
foodmood/meals/migrations/: 0001_initial.py  0002_remove_recipeingredient_ingredient_and_more.py  0003_auto_20250808_1726.py  0004_remove_recipeingredient_ingredient_and_more.py
foodmood/meals/templates/meals/: create.html  create_recipe.html  detail.html  index.html
foodmood/recipes/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
foodmood/recipes/migrations/: 0001_initial.py
foodmood/static/: common.js  styles.css
foodmood/templates/: index.html  layout.html
foodmood/users/: tests.py  urls.py  views.py
foodmood/users/templates/users/: login.html  register.html
foodmood/wellbeing/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
foodmood/wellbeing/migrations/: 0001_initial.py  0002_alter_wellbeingentry_categoric_value.py  0002_wellbeingcategory_is_active.py
foodmood/wellbeing/templates/wellbeing/: _entry_table.html  category_detail.html  category_form.html  category_list.html  entry_bulk.html  entry_delete.html  entry_detail.html  entry_form.html  entry_list.html  entry_quick.html  index.html
scripts/: docker.sh  entrypoint.dev.sh  entrypoint.prod.sh
