[project]
name = "foodmood"
version = "0.1.0"
description = "FoodMood is a webpage, that let's you track your meals and your wellbeing to look for correlations"
authors = [{ name = "CeVauDe", email = "cevaude@outlook.de" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = ["django (>=5.2.4,<6.0.0)", "python-dotenv (>=1.1.1,<2.0.0)", "psycopg2-binary (>=2.9.10,<3.0.0)"]

[tool.poetry.group.dev.dependencies]
mypy = "^1.17.0"
pre-commit = "^4.2.0"
ruff = "^0.12.5"
django-types = "^0.22.0"
django-stubs-ext = "^5.2.2"
coverage = "^7.10.0"
django-stubs = {extras = ["compatible-mypy"], version = "^5.2.2"}

[tool.mypy]
python_version = "3.13"
plugins = ["mypy_django_plugin.main"]

# Require type annotations
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true

# Strict optional and None checks
strict_optional = true
no_implicit_optional = true

# Warn about various issues
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true

# Additional strict checks
check_untyped_defs = true
strict_equality = true
show_error_codes = true

[tool.django-stubs]
django_settings_module = "foodmood.settings"

[tool.poe.tasks]
mypy = { shell = "cd foodmood && mypy ." }
mypy-strict = { shell = "cd foodmood && mypy . --strict" }
pre-commit = "pre-commit run --all-files"
startapp  = "python foodmood/manage.py startapp"
test = "python foodmood/manage.py test foodmood -p 'test*.py' --parallel"
test-app = "python foodmood/manage.py test -p 'test*.py'"
test-coverage = { shell = "coverage run --source='.' foodmood/manage.py test foodmood -p 'test*.py' && coverage report" }
test-coverage-html = { shell = "coverage run --source='.' foodmood/manage.py test foodmood -p 'test*.py' && coverage html" }

[tool.poe.tasks.mydc]
shell = """
./scripts/docker.sh
"""
interpreter = "posix"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
